# codex-rust-teaching

./: .gitignore  Cargo.toml  README.md
crates/rt-ast/: Cargo.toml
crates/rt-ast/src/: lib.rs
crates/rt-cli/: Cargo.toml
crates/rt-cli/src/: main.rs
crates/rt-codegen/: Cargo.toml
crates/rt-codegen/src/: lib.rs
crates/rt-common/: Cargo.toml
crates/rt-common/src/: lib.rs
crates/rt-driver/: Cargo.toml
crates/rt-driver/src/: lib.rs
crates/rt-ir-view/: Cargo.toml
crates/rt-ir-view/src/: lib.rs
crates/rt-lexer/: Cargo.toml
crates/rt-lexer/src/: lib.rs
crates/rt-parser/: Cargo.toml
crates/rt-parser/src/: lib.rs
crates/rt-semantic/: Cargo.toml
crates/rt-semantic/src/: lib.rs
docs/: 01-requirements.md  02-tech-stack.md  03-development-environment.md  04-roadmap.md  05-architecture-decisions.md  06-testing-strategy.md  07-agent-operations.md  README.md
examples/: basic.rs  control_flow.rs  function_call.rs  lexer_showcase.rs  semantic_errors.rs
scripts/: compare-with-rustc.sh
