[package]
name = "rt-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rt-ast = { path = "../rt-ast" }
rt-common = { path = "../rt-common" }

[dev-dependencies]
rt-lexer = { path = "../rt-lexer" }
rt-parser = { path = "../rt-parser" }

[lib]
path = "src/lib.rs"
